kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-ingress

  annotations:
    kubernetes.io/ingress.class: alb

spec:

  ingressClassName: alb

  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: flask-service

            port:
              number: 80
